--- a/about.html
+++ b/about.html
@@ -144,43 +144,60 @@
     </nav>
 
     <div class="container text-center margprod">
-      <h1 class="mb-5" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Mengapa Fashion Kulit?</h1>
-      <div class="row d-flex align-items-center">
-        <div class="col-md-4">
-          <img src="img/dalam1.jpg" class="foto1" alt="" />
+      <div class="margteng">
+        <div class="row d-flex justify-content-center align-items-center text-start">
+          <div class="col-md-6">
+            <h1 class="fw-bold judawal" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">This is <br />KulitAbdi.Co</h1>
+          </div>
+          <div class="col-md-6">
+            <p style="line-height: 200%" data-aos="fade-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
+              Kulit Abdi.Co didirikan pada tahun 2023 di Jalan Surya Sumatri, Bandung, Jawa Barat. Kami memproduksi fashion basic kulit asli handmade (<i> vintage </i>) dan setiap bahan yang kami gunakan harus melewati quality control
+              standar untuk menjamin kualitas produk kami.
+            </p>
+            <p style="line-height: 200%" data-aos="fade-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
+              Sebagai pengusaha, kami mendorong satu sama lain untuk tumbuh dan berinovasi. Sebagai sebuah perusahaan, kami menyingsingkan lengan baju untuk menanam akar di komunitas yang kami sebut rumah. Produk kami kuat dan tahan lama,
+              serta dapat disesuaikan untuk memenuhi kebutuhan fashion apa pun. Bahkan milikmu.
+            </p>
+          </div>
         </div>
-        <div class="col-md-8 text-start" data-aos="fade-right" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
-          <p>
-            Sebagai salah satu material yang terkesan mewah dan berkelas, bahan kulit memang selalu menarik untuk dieksplorasi menjadi pakaian yang memukau. Khusus untuk tahun 2023, item fashion berbahan kulit yang diciptakan dalam berbagai
-            variasi warna bahkan juga bisa diandalkan untuk bergaya saat ini.
-            <br />
-            <br />
-            Penggunaan bahan kulit dalam pembuatan produk fashion dapat menampilkan kesan eksklusif yang mewah, di samping kekuatan barang yang juga baik. Bahan kulit ini dapat dimanfaatkan untuk membuat produk-produk seperti beraneka ragam
-            tas, dompet, jaket, sepatu, gesper, dan sebagainya. Kini Industri kulit asal Indonesia hampir sama dengan produk kulit kenamaan asal Italia, yaitu Gucci.
-          </p>
+        <h1 class="kikiki" data-aos="fade-down" data-aos-offset="100" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">Ini adalah kebijakan pintu terbuka kami. Keanekaragaman dan inklusi.</h1>
+      </div>
+      <div class="margteng">
+        <div class="row d-flex justify-content-center align-items-center" style="height: 50vh">
+          <div class="col-md-6 my-auto" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
+            <h1 style="font-size: 4em"><b>160,000+</b></h1>
+            <h2>Akun pelanggan berbayar</h2>
+          </div>
+          <div class="col-md-6 my-auto" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
+            <h1 style="font-size: 4em"><b>76</b></h1>
+            <h2>Karyawan global</h2>
+          </div>
+        </div>
+
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col-md-5 my-auto tulisan" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
+            <h1 style="font-size: 4em"><b>89</b></h1>
+            <h1>Negara dan wilayah pelanggan</h1>
+          </div>
+          <div class="col-md-7 my-auto" data-aos="zoom-out" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
+            <img src="img/map.gif" alt="" style="height: auto; width: 100%; max-width: 1000px; max-height: 1000px" />
+          </div>
         </div>
       </div>
-      <div class="margteng"></div>
-      <h1 class="my-5" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">KulitAbdi.Co</h1>
       <div class="margteng">
-        <p data-aos="fade-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
-          Kulit Abdi.Co didirikan pada tahun 2023 di Jalan Surya Sumatri, Bandung, Jawa Barat. Kami memproduksi fashion basic kulit asli handmade (<i> vintage </i>) dan setiap bahan yang kami gunakan harus melewati quality control standar
-          untuk menjamin kualitas produk kami.
-        </p>
-        <img src="img/about1.jpg" class="img-about1" alt="" />
-        <div class="text-start" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
-          <p>
-            Sebuah survei telah dilakukan dan menunjukkan bahwa produk kami tahan lama hingga lebih dari 20 tahun dan banyak pelanggan kami yang senang dengan produk KulitAbdi. Selain bahan pilihan yang berkualitas tinggi, kami juga
-            mengutamakan inovasi motif dan variasi agar produk kami tampil stand out dan mewah.
-          </p>
-          <p>Pelanggan dapat mengunjungi toko dan reseller resmi kami untuk membeli produk kulit asli kami seperti tas, dompet, sepatu, dan ikat pinggang.</p>
-          <p>Kami telah menjual produk kulit asli terbaik selama lebih dari 40 tahun hanya untuk kepuasan pelanggan kami.</p>
+        <div class="row justify-content-center align-items-center" style="height: 30vh">
+          <div class="col-md-12 my-5" data-aos="zoom-out-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
+            <h1 class="tulisanakhir">Kami memiliki lowongan pekerjaan. Bergabunglah dengan kami.</h1>
+          </div>
         </div>
+      </div>
+      <hr style="border: 10px solid brown; border-radius: 5px" />
+      <br />
+      <div class="margteng">
+        <h1 style="font-size: 3em" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Vision</h1>
+        <p style="font-size: 1.5em" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">"Menjadi perusahaan <i>fashion</i> kulit terbaik dan terbesar di Indonesia."</p>
         <div class="row d-flex justify-content-center align-items-center my-5">
-          <div class="col-md-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true"><img class="img-size-about" src="img/about2.jpg" alt="" /></div>
           <div class="col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
-            <h1>Vision</h1>
-            <p>"Menjadi perusahaan <i>fashion</i> kulit terbaik dan terbesar di Indonesia."</p>
             <h1>Mission</h1>
             <ul class="text-start">
               <li class="my-2"><i>Environment</i> (untuk membuat suasana lingkungan kerja yang nyaman)</li>
@@ -188,8 +205,6 @@
               <li class="my-2"><i>Development</i> (untuk selalu memperluas jaringan dan target pasar)</li>
             </ul>
           </div>
-        </div>
-        <div class="row d-flex justify-content-center align-items-center my-5">
           <div class="col-md-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <h1>Our Values</h1>
             <ul class="text-start">
@@ -199,9 +214,6 @@
               <li class="my-2 t-values">Integrity - Menjunjung tinggi kejujuran</li>
               <li class="my-2 t-values">Loyal - Memiliki kesetiaan yang tinggi</li>
             </ul>
-          </div>
-          <div class="col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
-            <img class="img-size-about" src="img/about3.jpg" alt="" />
           </div>
         </div>
       </div>
