--- a/contact.html
+++ b/contact.html
@@ -319,7 +319,7 @@
                   <div class="accordion-body">Anda dapat menggunakan beberapa metode pembayaran seperti kartu kredit, Paypal, Stripe, bahkan menggunakan cyrpto seperti bitcoin.</div>
                 </div>
               </div>
-              <div class="accordion-item my-4 rounded-3">
+              <div class="accordion-item mt-4 rounded-3">
                 <h2 class="accordion-header" id="flush-headingFive">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                     <b>Penjelasan halaman produk</b>
@@ -363,13 +363,13 @@
                   <div id="emailHelp" class="form-text">&nbsp; We will not share your email</div>
                 </div>
                 <div class="mb-3">
-                  <label for="Name" class="form-label">Fullname</label>
+                  <label for="Name" class="form-label">Nama Lengkap</label>
                   <input type="text" class="form-control" id="name" name="name" required />
                 </div>
                 <div class="mb-3">
-                  <label for="country" class="form-label">Country</label>
+                  <label for="country" class="form-label">Negara</label>
                   <select id="country" class="form-select" name="country" class="mb-3" required>
-                    <option value="">--- Choose Country ---</option>
+                    <option value="">--- Pilih Negara ---</option>
                     <option value="Indonesia">Indonesia</option>
                     <option value="Malaysia">Malaysia</option>
                     <option value="Singapura">Singapore</option>
@@ -378,10 +378,10 @@
                   </select>
                 </div>
                 <div class="mb-3">
-                  <label for="massages1" class="form-label">Write Message</label>
+                  <label for="massages1" class="form-label">Tulis Pesan</label>
                   <textarea class="form-control contact-textarea" id="massages1" rows="5" name="message" required></textarea>
                 </div>
-                <button type="submit" class="btn my-1 btn-warning w-100 mt-3 mb-5" style="height: 3rem" id="contact-button">Send</button>
+                <button type="submit" class="btn my-1 btn-warning w-100 mt-3 mb-5" style="height: 3rem" id="contact-button">Kirim</button>
                 <script>
                   const form1 = document.getElementById('myForm');
                   $('#myForm').on('submit', function (e) {
