--- a/about.html
+++ b/about.html
@@ -160,17 +160,21 @@
             </p>
           </div>
         </div>
-        <h1 class="kikiki" data-aos="fade-down" data-aos-offset="100" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">Ini adalah kebijakan pintu terbuka kami. Keanekaragaman dan inklusi.</h1>
       </div>
+      </div>
+      <div style="background-color: #463b26">
+        <h1 class="terang kikiki">Ini adalah kebijakan pintu terbuka kami. Keanekaragaman dan inklusi.</h1>
+      </div>
+    <div class="container text-center">
       <div class="margteng">
         <div class="row d-flex justify-content-center align-items-center" style="height: 50vh">
           <div class="col-md-6 my-auto" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
-            <h1 style="font-size: 4em"><b>160,000+</b></h1>
-            <h2>Akun pelanggan berbayar</h2>
+            <h1 class="terang" style="font-size: 4em"><b>160,000+</b></h1>
+            <h2 class="terang">Akun pelanggan berbayar</h2>
           </div>
           <div class="col-md-6 my-auto" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
-            <h1 style="font-size: 4em"><b>76</b></h1>
-            <h2>Karyawan global</h2>
+            <h1 class="terang" style="font-size: 4em"><b>76</b></h1>
+            <h2 class="terang">Karyawan global</h2>
           </div>
         </div>
 
@@ -194,8 +198,10 @@
       <hr style="border: 10px solid brown; border-radius: 5px" />
       <br />
       <div class="margteng">
-        <h1 style="font-size: 3em" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Vision</h1>
-        <p style="font-size: 1.5em" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">"Menjadi perusahaan <i>fashion</i> kulit terbaik dan terbesar di Indonesia."</p>
+        <h1 class="terang" style="font-size: 3em" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Vision</h1>
+        <p class="terang" style="font-size: 1.5em" data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
+          "Menjadi perusahaan <i>fashion</i> kulit terbaik dan terbesar di Indonesia."
+        </p>
         <div class="row d-flex justify-content-center align-items-center my-5">
           <div class="col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <h1>Mission</h1>
@@ -218,6 +224,7 @@
         </div>
       </div>
     </div>
+  </div>
 
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
