--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -61,6 +61,12 @@
             <div class="col-md-2">
               <img src="img/dalam3.jpg" class="fotodalama" alt="" />
             </div>
+            <div class="col-md-2">
+              <img src="img/dalam4.jpg" class="fotodalama" alt="" />
+            </div>
+            <div class="col-md-2">
+              <img src="img/dalam5.jpg" class="fotodalama" alt="" />
+            </div>
           </div>
           <div class="row d-flex justify-content-center align-items-center mt-5">
             <div class="col-md-8">
@@ -454,7 +460,7 @@
               Tentu sangat disayangkan jika jaket berharga mahal tersebut rusak dalam waktu cepat. Melansir berbagai sumber, berikut beberapa cara merawat jaket kulit agar lebih tahan lama.
             </p>
             <div class="heading" style="margin-left: -8px">
-              <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+              <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
             </div>
             <div class="pencipta">By <span class="nama-berita">Setiawan</span> 1 days ago</div>
           </div>
@@ -465,12 +471,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/sepatu_rawat.jpg" alt="" />
               </div>
-              <div class="category">Perawatan Sepatu</div>
+              <div class="category" style="color: #6F4628;">Perawatan Sepatu</div>
               <div class="heading">
                 Merawat Sepatu Kulit Mudah dan Cepat
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">David</span> 4 days ago</div>
               </div>
             </div>
@@ -480,12 +486,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/bahan_kulit.jpg" alt="" />
               </div>
-              <div class="category">Perawatan Bahan Kulit</div>
+              <div class="category" style="color: #6F4628">Perawatan Bahan Kulit</div>
               <div class="heading">
                 Cara Mengidentifikasi Bahan Kulit Asli
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">Arthur</span> 7 days ago</div>
               </div>
             </div>
@@ -495,12 +501,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/jelajah.jpg" alt="" />
               </div>
-              <div class="category">Bahan Tas Kulit</div>
+              <div class="category" style="color: #6F4628">Bahan Tas Kulit</div>
               <div class="heading">
                 Jenis Bahan Tas Kulit yang Banyak Dicari
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">Yehezkiel</span> 13 days ago</div>
               </div>
             </div>
@@ -510,12 +516,12 @@
               <div class="berita-image">
                 <img class="foto12" style="border-radius: 15px" src="img/about3.jpg" alt="" />
               </div>
-              <div class="category">Jaket Kulit</div>
+              <div class="category" style="color: #6F4628">Jaket Kulit</div>
               <div class="heading">
                 Cara Memilih Jaket Kulit Berkualitas
                 <br />
                 <br />
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: #6F4628">Baca Selengkapnya...</p></a>
                 <div class="pencipta">By <span class="nama-berita">cristianto</span> 23 days ago</div>
               </div>
             </div>
@@ -528,7 +534,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
-      <section class="d-flex text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
+      <section class="d-flex bg-foot text-dark justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #ffc0ad">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -562,11 +568,7 @@
             <!-- Grid column -->
             <div class="col-md-2 col-lg-3 col-xl-2 mx-auto mb-4">
               <!-- Content -->
-              <img src="img/brunch.png" class="logofoot rounded-5" alt="" />
-              <div>
-                <h3 class="text-center text-black">KulitAbdi.co</h3>
-                <p class="text-center text-black" style="font-size: 0.65em">QUALITY • DURABLE • CREATIVE</p>
-              </div>
+              <img src="img/logo.png" class="logofoot" alt="" />
             </div>
             <!-- Grid column -->
 
@@ -624,7 +626,7 @@
       <!-- Section: Links  -->
 
       <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">© 2023 Copyright <b>KulitAbdi.Co</b></div>
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">© 2023 Copyright: <b>KulitAbdi.Co</b></div>
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
@@ -647,7 +649,7 @@
           buttonColorDark: '#100f2c', // default: '#100f2c'
           buttonColorLight: '#fff', // default: '#fff'
           saveInCookies: false, // default: true,
-          label: '👁', // default: ''
+          label: '🌓', // default: ''
           autoMatchOsTheme: true, // default: true
         };
 
